<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.ridecellassignment.ui.auth.LoginViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.SignUpActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="@string/sign_up"
                app:titleTextAppearance="@style/toolbar_text" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/btn_signup"
            android:layout_below="@id/appbar"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:hint="@string/full_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        app:boxStrokeColor="#fff" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:hint="@string/email_id">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        app:boxStrokeColor="#fff" />
                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:hint="@string/password">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_pass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            app:boxStrokeColor="#fff" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <ImageView
                        android:id="@+id/image_visiblep"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:layout_marginEnd="25dp"
                        android:layout_marginRight="25dp"
                        android:paddingTop="6dp"
                        android:src="@drawable/ic_visibility" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/ll_weak_pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:text="@string/password_is_weak"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <View
                                android:id="@+id/weak_pass"
                                android:layout_width="match_parent"
                                android:layout_height="8dp"
                                android:layout_weight="3"
                                android:layout_marginTop="3dp"
                                android:background="@color/red" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="8dp"
                                android:layout_weight="1"
                                android:layout_marginTop="3dp"
                                android:background="@color/lightGrey" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_strong_pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:text="@string/password_is_strong"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="8dp"
                                android:layout_weight="1"
                                android:layout_marginTop="3dp"
                                android:background="@color/green" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="8dp"
                                android:layout_weight="1"
                                android:layout_marginTop="3dp"
                                android:background="@color/lightGrey" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_very_strong_pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:text="@string/password_is_very_strong"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="8dp"
                            android:layout_marginTop="3dp"
                            android:background="@color/dark_green" />
                    </LinearLayout>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:hint="@string/confirm_password">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_confirm_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            app:boxStrokeColor="#fff" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <ImageView
                        android:id="@+id/image_visiblecp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:layout_marginEnd="25dp"
                        android:layout_marginRight="25dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:paddingTop="6dp"
                        android:src="@drawable/ic_visibility" />
                </RelativeLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_alignParentBottom="true"
            android:layout_margin="15dp"
            android:text="@string/sign_up"
            android:textColor="@color/white" />
    </RelativeLayout>
</layout>